font and spacing fixes

--- a/src/index.css
+++ b/src/index.css
@@ -296,8 +296,6 @@ code {
   height: 100%;
 }
 }
-
- 
 @media screen and (max-width: 900px ){
   .about_block,.cnrg_overall,.facilities_blockoverall,.team_blockoverall{
     display: none;
@@ -330,7 +328,6 @@ code {
   }
   
 }
-
 .smabout_block,.smteam_block,.smfacilities_block,.smcnrg_block{
   display: flex;
   flex-direction: column;
@@ -366,7 +363,6 @@ code {
   background-size: cover;
   background-color: #f4f4f4;
 }
-
 .smfirm-btn{
   padding-left: 10%;
   padding-top: 7%;
@@ -375,7 +371,6 @@ code {
 .smgrid:hover{
   cursor:crosshair;
 }
-
 @media screen and (min-width: 900px ){
   .smabout_block,.smoverallConatiner_facilities,.smoverallcontainer_team,.smcnrg_overall{
     display: none;
@@ -383,283 +378,4 @@ code {
   .max-pd{
     padding-left: 24px;
   }
- 
 }
-
-/*----------------------------*/
-.idhar{
-  background-color: #D9D9D9;
- 
-  width: 1580px;
-  height:  997px;
-  position: relative;
-  display: flex;
-
-
-}
-.main_chair 
-{
-display: flex;
-flex-direction: row;
-width: 100%;
-height: 100%;
-}
-
-
-.flexing{
-display: flex;
-flex-direction: column;
-position: relative;
-margin-top: 15%;
-
-}
-.main_image{
-  position: relative;
-  top: 187px;
-width: 416px;
-height: 497px;
-left: 282px;
-border-radius: 10px;
-}
-.para{
-  position: relative;
-border-radius: 1vh;
-padding: 10px;
-width: 550px;
-height: 289px;
-left: 60%;
-top: 10%;
-
-font-family: 'Familjen Grotesk';
-font-style: normal;
-font-weight: 400;
-font-size: 3vh;
-line-height: 160%;
-/* or 38px */
-
-
-color: #565656;
-
-}
-.heading
-{
-position: relative;
-
-width: 388px;
-height: 118px;
-left: 60%;
-top: 05%;
-
-font-family: 'Fira Sans Extra Condensed';
-font-style: normal;
-font-weight: 600;
-font-size: 8vh;
-line-height: 123%;
-/* identical to box height, or 118px */
-
-text-transform: uppercase;
-
-color: #000000;
-
-}
-.union_footer{
-  background-repeat: no-repeat;
-  background-size: cover;
- border-width:0px;
- position: absolute;
- width: 1580px;
- height: 100.26px;
- left: 1px;
- top: 1100px;
-}
-.icons{
-  display: flex;
-  flex-direction: row;
-  position: relative;
-  left: -54px;
-}
-.ico{
-  align-items: flex-start;
-  margin-left: 10%;
- 
-}
-/******-----*********/
-.idhar2{
-  background-color: #D9D9D9;
- background-image:  url('./images/teams.png');
- background-size:100% 100%;
-  position: relative;
-  display: flex;
-  background-repeat: no-repeat;
-  
-  
-}
-.main_chair2 
-{
-display: flex;
-flex-direction:row;
-width: 1580px;
-height:  997px;
-
-}
-
-
-
-
-
-.flexing2{
-display: flex;
-flex-direction: column;
-position: relative;
-margin-top: 15%;
-
-}
-.main_image2{
-  
-  position: relative;
-  display: flex;
-  flex-direction: column;
- 
-  top: 245px;
-  width: 416px;
-  height: 497px;
-  right: -48%;
-}
-.para2{
-  position: relative;
-border-radius: 1vh;
-padding: 10px;
-width: 550px;
-height: 289px;
-right: 20%;
-top: 15%;
-
-font-family: 'Familjen Grotesk';
-font-style: normal;
-font-weight: 400;
-font-size: 3vh;
-line-height: 160%;
-/* or 38px */
-
-
-color: #565656;
-
-}
-.heading2
-{
-position: relative;
-
-width: 388px;
-height: 118px;
-right: 20%;
-top: 10%;
-
-font-family: 'Fira Sans Extra Condensed';
-font-style: normal;
-font-weight: 600;
-font-size: 8vh;
-line-height: 123%;
-/* identical to box height, or 118px */
-
-text-transform: uppercase;
-
-color: #000000;
-
-}
-.union_footer2{
-  background-repeat: no-repeat;
-  background-size: cover;
- border-width:0px;
- position: absolute;
- width: 1580px;
- height: 100.26px;
- left: 1px;
- top: 1100px;
-}
-.icons2{
-  display: flex;
-  flex-direction: row;
-  position: relative;
-  left: -54px;
-}
-.ico2{
-  align-items: flex-start;
-  margin-left: 10%;
- 
-}
-.idhar3{
-  background-color: #7BB9C4;
- background-image:  url('./images/Union.png');
- background-size:100% 100%;
-  position: relative;
-  display: flex;
-  background-repeat: no-repeat;
-  
-  
-}
-.main_chair3{
-   
-
-display: flex;
-flex-direction:row;
-width: 1580px;
-height:  997px;
-top: 10%;
-}
-.flexing3{
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  margin-top: 15%;
-  
-  }
-  .main_image3{
-    position: relative;
-    top: 307px;
-  width: 416px;
-  height: 497px;
-  left: 282px;
-  border-radius: 10px;
-  }
-  .para3{
-    position: relative;
-  border-radius: 1vh;
-  padding: 10px;
-  width: 550px;
-  height: 289px;
-  left: 60%;
-  top: 25%;
-  
-  font-family: 'Familjen Grotesk';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 3vh;
-  line-height: 160%;
-  /* or 38px */
-  
-  
-  color: #565656;
-  
-  }
-  .heading3
-  {
-  position: relative;
-  
-  width: 388px;
-  height: 118px;
-  left: 60%;
-  top: 20%;
-  
-  font-family: 'Fira Sans Extra Condensed';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 8vh;
-  line-height: 123%;
-  /* identical to box height, or 118px */
-  
-  text-transform: uppercase;
-  
-  color: #000000;
-  
-  }
-  
